--- a/.github/workflows/release-github.yml
+++ b/.github/workflows/release-github.yml
@@ -34,7 +34,7 @@ jobs:
         uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
 
       - name: Publish package
-        run: ./gradlew -p compose publish
+        run: ./gradlew publish
         env:
           GITHUB_ACTOR: ${{ github.actor }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
