Added ktfmt to gradle

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /.idea/assetWizardSettings.xml
 /.idea/deploymentTargetSelector.xml
 /.idea/other.xml
+/.idea/material_theme_project_new.xml
 .DS_Store
 /build
 /captures
