feat: mutable state for map controls

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,8 @@
 *.iml
 .gradle
 /local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/appInsightsSettings.xml
-/.idea/assetWizardSettings.xml
-/.idea/deploymentTargetSelector.xml
-/.idea/other.xml
-/.idea/material_theme_project_new.xml
-/.idea/ktfmt.xml
+/.idea/
+/.kotlin/
 .DS_Store
 /build
 /captures
