--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,3 +84,49 @@ jobs:
 
     - name: Verify Kotlin formatting
       run: ./gradlew test
+
+  connected-check:
+
+    runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}-android-connected-check
+      cancel-in-progress: true
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: "17"
+          distribution: "temurin"
+          cache: gradle
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      - name: Enable KVM group perms
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
+
+      - name: Copy api_keys.xml
+        run: cp api_keys_template.xml app/src/main/res/values/api_keys.xml
+
+      - name: Run Connected Checks
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 30
+          avd-name: ubuntu-latest-x86_64-aosp-atd-30
+          arch: x86_64
+          target: aosp_atd
+          script: ./gradlew connectedCheck
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: connected-reports
+          path: |
+            **/build/reports
