--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.7.2"
+agp = "8.7.3"
 kotlin = "2.0.21"
 ktfmt = "0.20.1"
 mavenPublish = "0.29.0"
@@ -9,11 +9,11 @@ junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.9.3"
-composeBom = "2024.10.01"
+composeBom = "2024.12.01"
 maplibre = "11.7.1"
 maplibre-annotation = "3.0.2"
-navigationCompose = "2.8.3"
-mockk = "1.13.13"
+navigationCompose = "2.8.5"
+mockk = "1.13.14"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -33,7 +33,7 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 maplibre = { group = "org.maplibre.gl", name = "android-sdk", version.ref = "maplibre" }
-maplibre-vulkan = { module = "org.maplibre.gl:android-sdk-vulkan", version.ref = "maplibre" }
+maplibre-vulkan = { group = "org.maplibre.gl", name = "android-sdk-vulkan", version.ref = "maplibre" }
 maplibre-annotation = { group = "org.maplibre.gl", name = "android-plugin-annotation-v9", version.ref = "maplibre-annotation"}
 mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
 
